# pr2_hack_the_future

./: .hgignore  hgignore.sh  rosdep.yaml  stack.xml
hack_the_web_program_executor/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hack_the_web_program_executor/nodes/: poser_real_robot.py  robot_program_executor.py
hack_the_web_program_executor/scripts/: poser_real_robot.py  robot_program_executor.py
hack_the_web_program_executor/src/: Signal.py
hack_the_web_program_executor/src/actions/: ActionSequence.py  ActionSet.py  Pr2GripperAction.py  Pr2JointTrajectoryAction.py  Pr2LookAtFace.py  Pr2MoveHeadAction.py  WaitAction.py
hack_the_web_program_executor/src/hack_the_web_program_executor/: poseutils.py
pr2_hack_the_future/: CHANGELOG.rst  CMakeLists.txt  package.xml
pr2_joint_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_joint_teleop/launch/: sliders.launch
pr2_joint_teleop/nodes/: pose.py  pose2.py
pr2_simple_interface/: CHANGELOG.rst  CMakeLists.txt  TODO.txt  mainpage.dox  manifest.xml  package.xml  sample.py
pr2_simple_interface/nodes/: caroline.py  sample.py  steve.py
pr2_simple_interface/src/: pr2_simple_interface.py
program_queue/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
program_queue/backups/: program_queueJul9_2012.db
program_queue/launch/: htf.launch  program_queue.launch  proxy_client.launch  proxy_client.sh  queue_python.launch
program_queue/msg/: ProgramInfo.msg
program_queue/nodes/: program_queue.py  program_queue_mysql.py
program_queue/srv/: CreateUser.srv  GetOutput.srv  GetProgram.srv  GetPrograms.srv  GetQueue.srv  Login.srv  Logout.srv  QueueProgram.srv  RunProgram.srv  UpdateProgram.srv
program_queue/test/: test_queue.py
queue_web/: CHANGELOG.rst  CMakeLists.txt  TODO  ace.sh  install.sh  mainpage.dox  manifest.xml  package.xml  queue-web
queue_web/new_www/: index.html
queue_web/new_www/css/: screen.css
queue_web/new_www/js/: editor.js  jquery.cookies.2.2.0.js  login.js
queue_web/www/: TODO.txt  editor.css  editor.js  index.html  jquery-ui.css  jquery-ui.js  login.js  ros.js  web_abomination.html
robosite/: hack-the-future  settings.py  settings.py~  sqlite3.db  urls.py  urls.py~
robosite/pqr/: admin.py  admin.py~  models.py  models.py~  urls.py  urls.py~  views.py  views.py~
robosite/pqr/templates/: adminqueue.html  base.html  base.html~  footer.html  footer.html~  header.html  header.html~  index.html  index.html~  login.html  loginPage.html  output.html  program.html  program.html~  programForm.html  programForm.html~  programmer.html  programmerForm.html~  queue.html  queue.html~
robosite/static/: index.html
robosite/static/css/: grid-1080.css  master.css
rviz_backdrop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  plugin_description.xml  rviz_config.vcg
rviz_backdrop/scripts/: publish_backdrop.py
rviz_backdrop/src/: backdrop_display.cpp  backdrop_display.h
slider_gui/: CHANGELOG.rst  CMakeLists.txt  README.txt  mainpage.dox  manifest.xml  package.xml
slider_gui/launch/: empty_world_paused.launch  pr2_blocks_world.launch  pr2_empty_world.launch  pr2_table_simple_shapes.launch  proto_simple.launch  slider_blocks_sim.launch  slider_simple_robot.launch  slider_simple_sim.launch  slider_simple_sim_no_collision.launch  slider_simple_table_sim.launch  state_check_service.launch  test_actions.launch
slider_gui/nodes/: program_runner.py  proto_simple.py  slider_simple.py  test_actions.py  test_joint_state_check.py
slider_gui/scripts/: image_hack.py  setup_env_for_robot.sh  upload-program.py
slider_gui/src/: CollisionChecker.py  DoubleSpinBoxDelegate.py  IntegerSpinBoxDelegate.py  KontrolSubscriber.py  PosesDataModel.py  ProgramQueue.py  Ps3Subscriber.py  SimpleFormat.py  collision_dialog.ui  queue_dialog.ui  sharon_simple.ui  slider_simple.ui  wrong_input_method_dialog.ui  wrong_scene_dialog.ui
slider_gui/src/actions/: Action.py  ActionSequence.py  ActionSet.py  DefaultAction.HRI.py  DefaultAction.PhotoWorthy.py  DefaultAction.py  Pr2GripperAction.py  Pr2JointTrajectoryAction.py  Pr2LookAtFace.py  Pr2MoveHeadAction.py  Pr2MoveLeftArmAction.py  Pr2MoveLeftGripperAction.py  Pr2MoveRightArmAction.py  Pr2MoveRightGripperAction.py  Pr2MoveTorsoAction.py  WaitAction.py
slider_gui/srv/: RunProgram.srv
slider_gui/urdf/: cylinder_blue.urdf  cylinder_green.urdf  cylinder_red.urdf  cylinder_yellow.urdf  rectangular2_green.urdf  rectangular_red.urdf  table.urdf
web_interface/: ConnectionWithOptionalParse.js  README  login.html  login.js  my_programs.html  my_programs.js  queue.html  queue.js  web_abomination.html  web_abomination.html.old  web_abomination.js  write_program.html  write_program.js
