<package>
  <name>hack_the_web_program_executor</name>
  <version>1.0.2</version>
  <description>hack_the_web_program_executor</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hack_the_web_program_executor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Mace</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>

