<?xml version="1.0"?>
<package>
  <name>pr2_hack_the_future</name>
  <version>1.0.5</version>
  <description>The pr2_hack_the_future package</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
