<?xml version="1.0"?>
<package>
  <name>pr2_hack_the_future</name>
  <version>1.0.7</version>
  <description>The pr2_hack_the_future package</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hack_the_web_program_executor</run_depend>
  <run_depend> pr2_joint_teleop</run_depend>
 <run_depend> program_queue</run_depend>
 <!-- Deprecate <run_depend> robosite</run_depend> -->
 <run_depend> slider_gui</run_depend>
<run_depend> queue_web</run_depend>
<run_depend> rviz_backdrop</run_depend>
 <!-- Deprecate <run_depend> web_interface</run_depend> -->
<run_depend> pr2_simple_interface</run_depend>

  <export>
     <metapackage/>
  </export>
</package>
