<package>
  <name>queue_web</name>
  <version>1.0.2</version>
  <description>queue_web</description>
  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/queue_web</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Austin Hendrix</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>

