<package>
  <name>rviz_backdrop</name>
  <version>1.0.5</version>
  <description>rviz_backdrop</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>


  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rviz_backdrop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dave Hershberger</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rviz</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rviz</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rviz</test_depend> -->

<export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
</export>

</package>

